--- a/index.html
+++ b/index.html
@@ -38,5 +38,28 @@
     <p>
       <input type="text" value="e.g. John Doe" disabled>
     </p>
+    <p>
+      <input type="radio" name="radio"> yish
+    </p>
+    <p>
+      <input type="radio" name="radio"> yas
+    </p>
+    <p>
+      <input type="checkbox" name="check"> yish
+    </p>
+    <p>
+      <input type="checkbox" name="check"> yas
+    </p>
+    <p>
+      <label for="name">Name:</label>
+      <input id="name" type="text" placeholder="e.g. John Doe">
+    </p>
+    <p>
+      <label for="description">Description:</label>
+      <textarea id="description" placeholder="e.g. John Doe"></textarea>
+    </p>
+    <p>
+      <button>OK</button>
+    </p>
   </body>
 </html>
