4 new inout fields added

--- a/index.html
+++ b/index.html
@@ -61,5 +61,27 @@
     <p>
       <button>OK</button>
     </p>
+    <p>
+      <select>
+        <option>uno</option>
+        <option>dos</option>
+        <option>tres</option>
+      </select>
+    </p>
+    <p>
+      <input id="input1" type="text">
+    </p>
+    <p>
+      <input id="input2" type="text">
+    </p>
+    <p>
+      <input id="input3" type="text">
+    </p>
+    <p>
+      <input id="input4" type="text">
+    </p>
+    <p>
+      <input id="input5" type="text">
+    </p>
   </body>
 </html>
