cleaner code, cleaner life but mistakes were made

--- a/index.html
+++ b/index.html
@@ -83,5 +83,14 @@
     <p>
       <input id="input5" type="text">
     </p>
+    <p class="form">
+      <input type="text" value="input 1">
+      <button>Go</button>
+    </p>
+    <p class="form">
+      <label for="label">Label:</label>
+      <input id="label" type="text" value="input 2">
+      <button>Go</button>
+    </p>
   </body>
 </html>
